[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/UI/EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/Editor/Button.png" type="Texture" id=2]
[ext_resource path="res://Data/Editor/Item/Object/Earthworm/EarthwormConfig.gd" type="Script" id=3]
[ext_resource path="res://Data/Editor/AntiCursor.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_bottom = 2.0
bg_color = Color( 0.905882, 0.835294, 0.698039, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 80, 16, 16, 16 )

[node name="EarthwormConfig" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 264.0
margin_top = 21.0
margin_right = -10.0
margin_bottom = -35.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="P" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Ctl" type="TabContainer" parent="P"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 11.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
script = ExtResource( 4 )

[node name="T" type="Tabs" parent="P/Ctl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T"]
margin_left = 8.0
margin_top = 4.0
margin_right = 112.0
margin_bottom = 140.0
script = ExtResource( 4 )

[node name="SPos" type="Label" parent="P/Ctl/T/Vbc"]
margin_right = 104.0
margin_bottom = 8.0
custom_styles/normal = SubResource( 4 )
text = "Start Position"
script = ExtResource( 4 )

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/T/Vbc"]
margin_top = 12.0
margin_right = 104.0
margin_bottom = 42.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="X" type="Label" parent="P/Ctl/T/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 10.0
text = "X"
script = ExtResource( 4 )

[node name="SXPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc/Vbc"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Y" type="Label" parent="P/Ctl/T/Vbc/Hbc/Vbc2"]
margin_right = 32.0
margin_bottom = 10.0
text = "Y"
script = ExtResource( 4 )

[node name="SYPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc/Vbc2"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="MPos" type="Label" parent="P/Ctl/T/Vbc"]
margin_top = 46.0
margin_right = 104.0
margin_bottom = 54.0
custom_styles/normal = SubResource( 4 )
text = "Mid Position"
script = ExtResource( 4 )

[node name="Hbc2" type="HBoxContainer" parent="P/Ctl/T/Vbc"]
margin_top = 58.0
margin_right = 104.0
margin_bottom = 88.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc2"]
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/T/Vbc/Hbc2/Vbc"]
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="X" type="Label" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 10.0
text = "X"
script = ExtResource( 4 )

[node name="MXPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Y" type="Label" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc/Vbc2"]
margin_right = 32.0
margin_bottom = 10.0
text = "Y"
script = ExtResource( 4 )

[node name="MYPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc2/Vbc/Hbc/Vbc2"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="EPos" type="Label" parent="P/Ctl/T/Vbc"]
margin_top = 92.0
margin_right = 104.0
margin_bottom = 100.0
custom_styles/normal = SubResource( 4 )
text = "End Position"
script = ExtResource( 4 )

[node name="Hbc3" type="HBoxContainer" parent="P/Ctl/T/Vbc"]
margin_top = 104.0
margin_right = 104.0
margin_bottom = 134.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc3"]
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/T/Vbc/Hbc3/Vbc"]
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="X" type="Label" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 10.0
text = "X"
script = ExtResource( 4 )

[node name="EXPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc/Vbc"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Y" type="Label" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc/Vbc2"]
margin_right = 32.0
margin_bottom = 10.0
text = "Y"
script = ExtResource( 4 )

[node name="EYPos" type="LineEdit" parent="P/Ctl/T/Vbc/Hbc3/Vbc/Hbc/Vbc2"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Worm" type="Tabs" parent="P/Ctl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Worm"]
margin_left = 8.0
margin_top = 4.0
margin_right = 112.0
margin_bottom = 140.0
script = ExtResource( 4 )

[node name="M" type="Label" parent="P/Ctl/Worm/Vbc"]
margin_right = 110.0
margin_bottom = 8.0
custom_styles/normal = SubResource( 4 )
text = "Motion"
script = ExtResource( 4 )

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/Worm/Vbc"]
margin_top = 12.0
margin_right = 110.0
margin_bottom = 42.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Worm/Vbc/Hbc"]
margin_right = 38.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="SpdL" type="Label" parent="P/Ctl/Worm/Vbc/Hbc/Vbc"]
margin_right = 38.0
margin_bottom = 10.0
text = "Speed"
script = ExtResource( 4 )

[node name="Spd" type="LineEdit" parent="P/Ctl/Worm/Vbc/Hbc/Vbc"]
margin_top = 14.0
margin_right = 38.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/Worm/Vbc/Hbc"]
margin_left = 42.0
margin_right = 110.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="JmpDlL" type="Label" parent="P/Ctl/Worm/Vbc/Hbc/Vbc2"]
margin_right = 68.0
margin_bottom = 10.0
text = "Jump Delay"
script = ExtResource( 4 )

[node name="JmpDl" type="LineEdit" parent="P/Ctl/Worm/Vbc/Hbc/Vbc2"]
margin_top = 14.0
margin_right = 68.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="B" type="Label" parent="P/Ctl/Worm/Vbc"]
margin_top = 46.0
margin_right = 110.0
margin_bottom = 54.0
custom_styles/normal = SubResource( 4 )
text = "Body"
script = ExtResource( 4 )

[node name="Hbc2" type="HBoxContainer" parent="P/Ctl/Worm/Vbc"]
margin_top = 58.0
margin_right = 110.0
margin_bottom = 88.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Worm/Vbc/Hbc2"]
margin_right = 38.0
margin_bottom = 30.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/Worm/Vbc/Hbc2/Vbc"]
margin_right = 38.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Worm/Vbc/Hbc2/Vbc/Hbc"]
margin_right = 38.0
margin_bottom = 30.0
script = ExtResource( 4 )

[node name="PL" type="Label" parent="P/Ctl/Worm/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_right = 38.0
margin_bottom = 10.0
text = "Parts"
script = ExtResource( 4 )

[node name="P" type="LineEdit" parent="P/Ctl/Worm/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_top = 14.0
margin_right = 38.0
margin_bottom = 30.0
text = "0"
script = ExtResource( 4 )

[node name="Exit" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 122.0
margin_top = 4.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
